<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/news_item_view"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <ImageView
        android:id="@+id/news_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/news_headline_image"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/black_gradient"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".95" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxLines="3"
            android:text="@string/headline_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_vertical"
            app:layout_constraintStart_toEndOf="@id/start_guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/top_guideline_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:maxLines="3"
            android:text="@string/news_description"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_vertical"
            app:layout_constraintStart_toEndOf="@id/start_guideline_vertical"
            app:layout_constraintTop_toBottomOf="@+id/middle_guideline_horizontal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/source_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:text="@string/news_source"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/start_guideline_vertical"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline_horizontal"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="3"
            android:textColor="@color/white"
            android:text="@string/date_of_the_news"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@id/end_guideline_vertical"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline_horizontal"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>